Sat Oct  7 23:05:24 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* add.c, checkout.c, commit.c, cvs.h, filesubr.c, import.c,
	lock.c, main.c, modules.c, options.h.in: New variable cvsumask
	which is used to set mode of files in repository (regardless of
	umask in effect when cvs is run).

Sat Oct  7 22:40:17 1995  Stephen Bailey  <sjbailey@sand.npl.washington.edu>

	* lock.c: Include AFSCVS ifdefs to deal with AFS's lack of
	correspondance between userid's from stat and from geteuid.

Sat Oct  7 22:28:49 1995  Scott Carson  <sdc@TracerTech.COM>

	* add.c (add): Pass -ko, not -k -ko, to set keyword expansion options.

	* admin.c (admin): Don't skip first argument when sending to server.

Fri Oct  6 21:45:03 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Version 1.6.1.

Fri Oct  6 21:31:28 1995  Jeff Johnson  <jbj@brewster.jbj.org>

	* cvs.h, admin.c, client.c, commit.c, log.c, modules.c,
	parseinfo.c, patch.c, recurse.c, rtag.c, status.c, tag.c:
	Prototype when dealing in pointers to functions.

Fri Oct  6 21:07:22 1995  Mark H. Wilkinson  <mhw@minster.york.ac.uk>

	* cvsrc.c (read_cvsrc): fix look up of command names in cvsrc file
	to use full name from command table rather than possible nickname
	in argv. Fixes errors with things like `cvs di' when cvsrc has
	`diff -u5' in it.

Thu Aug  3 01:03:52 1995  Vince DeMarco  <vdemarco@bou.shl.com>

	* parseinfo.c (Parse_Info): Add code to call expand_path function
	instead of using built in code.

	* wrapper.c (wrap_add): Add code to call expand_path function to
	expand all built in variables.

	* expand_path.c (New file): expand things that look like
	environmental variables (only expand local CVS environmental
	variables) and user names like ~/.
	* cvs.h: Declare expand_path.

	* Makefile.in (SOURCES, OBJECTS): Added expand_path.c,
	expand_path.o.

Fri Oct  6 14:03:09 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* ignore.c (ign_setup): Don't try to look for a file in CVSroot if