@@ -146,6 +146,17 @@
 #endif
 
 /*
+ * The cvs admin command is restricted to the members of the group
+ * CVS_ADMIN_GROUP.  If this group does not exist, all users are
+ * allowed to run cvs admin.  To disable the cvs admin for all users,
+ * create an empty group CVS_ADMIN_GROUP.  To disable access control for
+ * cvs admin, comment out the define below.
+ */
+#ifndef CVS_ADMIN_GROUP
+#define CVS_ADMIN_GROUP "cvsadmin"
+#endif
+
+/*
  * The Repository file holds the path to the directory within the source
  * repository that contains the RCS ,v files for each CVS working directory.
  * This path is either a full-path or a path relative to CVSROOT.
